MFG Ready Version/force-app/main/default/objects/mfg_Defect_Code__c/mfg_Defect_Code__c.object-meta.xml
<CustomObject>
    <label>Defect Code</label>
    <nameField>
        <label>Defect Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Defect Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>