MFG Ready Version/force-app/main/default/objects/mfg_Defect_Code__c/fields/mfg_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>mfg_Activation_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>