MFG Ready Version/force-app/main/default/objects/mfg_Defect_Code__c/fields/mfg_Applicable_Families__c.field-meta.xml
<CustomField>
    <fullName>mfg_Applicable_Families__c</fullName>
    <label>Applicable Families</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>mfg_Product_Family</valueSetName>
    </valueSet>
</CustomField>