MFG Ready Version/force-app/main/default/objects/mfg_Defect_Code__c/fields/mfg_Applicable_Products__c.field-meta.xml
<CustomField>
    <fullName>mfg_Applicable_Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicable Products</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Defect Codes</relationshipLabel>
    <relationshipName>Defect_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>