MFG Ready Version/force-app/main/default/objects/mfg_Defect_Code__c/fields/mfg_Defect_Applicability__c.field-meta.xml
<CustomField>
    <fullName>mfg_Defect_Applicability__c</fullName>
    <label>Defect Applicability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Include</fullName>
            </value>
            <value>
                <fullName>Exclude</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>