MFG Ready Version/force-app/main/default/objects/mfg_Defect_Code__c/fields/mfg_Defect_Category__c.field-meta.xml
<CustomField>
    <fullName>mfg_Defect_Category__c</fullName>
    <label>Defect Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>mfg_Defect_Category</valueSetName>
    </valueSet>
</CustomField>