MFG Ready Version/force-app/main/default/objects/mfg_Defect_Code__c/fields/mfg_Defect_Code_Number__c.field-meta.xml
<CustomField>
    <fullName>mfg_Defect_Code_Number__c</fullName>
    <displayFormat>DCN-{0000000000}</displayFormat>
    <label>Defect Code Number</label>
    <type>AutoNumber</type>
</CustomField>