MFG Ready Version/force-app/main/default/objects/mfg_Defect_Code__c/fields/mfg_Defect_Level__c.field-meta.xml
<CustomField>
    <fullName>mfg_Defect_Level__c</fullName>
    <label>Defect Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Subcategory</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>