MFG Ready Version/force-app/main/default/objects/mfg_Defect_Code__c/fields/mfg_Description__c.field-meta.xml
<CustomField>
    <fullName>mfg_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>