MFG Ready Version/force-app/main/default/objects/mfg_Defect_Code__c/fields/mfg_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>mfg_Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>