MFG Ready Version/force-app/main/default/objects/mfg_Defect_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>mfg_Description__c</columns>
    <columns>mfg_Defect_Category__c</columns>
    <columns>mfg_Active__c</columns>
    <columns>mfg_Activation_Date__c</columns>
    <columns>mfg_Defect_Level__c</columns>
    <columns>mfg_Standard__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>